# n-queens-genetic

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: fitness.cpp  fitness.h  genetic_v1.cpp  genetic_v1.h  genetic_v2.cpp  genetic_v2.h  visualizer.cpp  visualizer.h
